migration: replace Map.of and List.of